Fix build on Windows

Avoid the use of 'interface' variable name in public headers to avoid
conflicting with the "#define interface struct" that Windows headers do.

https://bugzilla.gnome.org/show_bug.cgi?id=738551